--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.8.1"
+    "cypress": "^13.8.1",
+    "typescript": "^5.4.5"
   }
 }
