Add firefox setup

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -38,6 +38,9 @@ jobs:
         with:
           version: 9
 
+      - name: Setup Firefox
+        uses: browser-actions/setup-firefox@latest
+
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
