--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.8.1",
-    "typescript": "^5.4.5"
+    "cypress": "13.15.1",
+    "typescript": "5.6.3"
   }
 }
